real/FORTRAN4RESEARCHERS/output/Bubble_sort.out
[*] Running ikos preprocessor
[*] Running ikos analyzer
[*] Translating LLVM bitcode to AR
[*] Running liveness analysis
[*] Running widening hint analysis
[*] Running interprocedural value analysis
[*] Analyzing entry point 'MAIN_'
[*] Checking properties for entry point 'MAIN_'

# Time stats:
ikos-analyzer: 1.203 sec
ikos-pp      : 0.005 sec

# Summary:
Total number of checks                : 80
Total number of unreachable checks    : 0
Total number of safe checks           : 66
Total number of definite unsafe checks: 8
Total number of warnings              : 6

The program is definitely UNSAFE

# Results
FORTRAN4RESEARCHERS/Bubble_sort.f90: In function 'MAIN_':
FORTRAN4RESEARCHERS/Bubble_sort.f90:19:1: error: pointer arithmetic overflow
    dat(i) = n-i + 1
^
FORTRAN4RESEARCHERS/Bubble_sort.f90: In function 'MAIN_':
FORTRAN4RESEARCHERS/Bubble_sort.f90:19:1: error: buffer overflow, pointer '&((int32_t*)(&((int8_t*)(&.BSS1))[-4]))[(int64_t)({L.LB1_368: 1, L.LB1_358: (...) + 1})]' accesses 4 bytes at offset between 9223372036854775807 and -9223372036854775808 bytes of global variable '.BSS1' of size 40000 bytes
    dat(i) = n-i + 1
^
FORTRAN4RESEARCHERS/Bubble_sort.f90: In function 'MAIN_':
FORTRAN4RESEARCHERS/Bubble_sort.f90:32:1: error: pointer arithmetic overflow
      IF(dat(i) > dat(i+1)) THEN
^
FORTRAN4RESEARCHERS/Bubble_sort.f90: In function 'MAIN_':
FORTRAN4RESEARCHERS/Bubble_sort.f90:32:1: error: buffer overflow, pointer '&((int32_t*)(&((int8_t*)(&.BSS1))[-4]))[(int64_t)({L.LB1_397: 1, L.LB1_365: (...) + 1})]' accesses 4 bytes at offset between 9223372036854775807 and -9223372036854775808 bytes of global variable '.BSS1' of size 40000 bytes
      IF(dat(i) > dat(i+1)) THEN
^
FORTRAN4RESEARCHERS/Bubble_sort.f90: In function 'MAIN_':
FORTRAN4RESEARCHERS/Bubble_sort.f90:35:1: error: pointer arithmetic overflow
        dat(i+1) = dat(i)
^
FORTRAN4RESEARCHERS/Bubble_sort.f90: In function 'MAIN_':
FORTRAN4RESEARCHERS/Bubble_sort.f90:35:1: error: buffer overflow, pointer '&((int32_t*)(&((int8_t*)(&.BSS1))[-4]))[(int64_t)({L.LB1_397: 1, L.LB1_365: (...) + 1})]' accesses 4 bytes at offset between 9223372036854775807 and -9223372036854775808 bytes of global variable '.BSS1' of size 40000 bytes
        dat(i+1) = dat(i)
^
FORTRAN4RESEARCHERS/Bubble_sort.f90: In function 'MAIN_':
FORTRAN4RESEARCHERS/Bubble_sort.f90:36:1: error: pointer arithmetic overflow
        dat(i) = tmp_dat
^
FORTRAN4RESEARCHERS/Bubble_sort.f90: In function 'MAIN_':
FORTRAN4RESEARCHERS/Bubble_sort.f90:36:1: error: buffer overflow, pointer '&((int32_t*)(&((int8_t*)(&.BSS1))[-4]))[(int64_t)({L.LB1_397: 1, L.LB1_365: (...) + 1})]' accesses 4 bytes at offset between 9223372036854775807 and -9223372036854775808 bytes of global variable '.BSS1' of size 40000 bytes
        dat(i) = tmp_dat
^
FORTRAN4RESEARCHERS/Bubble_sort.f90: In function 'MAIN_':
FORTRAN4RESEARCHERS/Bubble_sort.f90:19:1: warning: pointer arithmetic might overflow
    dat(i) = n-i + 1
^
FORTRAN4RESEARCHERS/Bubble_sort.f90: In function 'MAIN_':
FORTRAN4RESEARCHERS/Bubble_sort.f90:32:1: warning: pointer arithmetic might overflow
      IF(dat(i) > dat(i+1)) THEN
^
FORTRAN4RESEARCHERS/Bubble_sort.f90: In function 'MAIN_':
FORTRAN4RESEARCHERS/Bubble_sort.f90:35:1: warning: pointer arithmetic might overflow
        dat(i+1) = dat(i)
^
FORTRAN4RESEARCHERS/Bubble_sort.f90: In function 'MAIN_':
FORTRAN4RESEARCHERS/Bubble_sort.f90:36:1: warning: pointer arithmetic might overflow
        dat(i) = tmp_dat
^
FORTRAN4RESEARCHERS/Bubble_sort.f90: In function 'MAIN_':
FORTRAN4RESEARCHERS/Bubble_sort.f90:48:1: warning: expression '*((int32_t*)(&.BSS1))' might be uninitialized
  PRINT*, "First and last elements of dat are :", dat(1), dat(n)
^
FORTRAN4RESEARCHERS/Bubble_sort.f90: In function 'MAIN_':
FORTRAN4RESEARCHERS/Bubble_sort.f90:48:1: warning: expression '*((int32_t*)(&((int8_t*)(&.BSS1))[39996]))' might be uninitialized
  PRINT*, "First and last elements of dat are :", dat(1), dat(n)
^
